--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -7,6 +7,13 @@
 // If a user adds a custom font, this component will stop it from bleeding into GitHub components:
 .github-component {
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol !important;
+  // transition
+  transition: all ease .5s;
+}
+
+.github-component:hover {
+  box-shadow: 0 16px 8px -8px #ccc;
+  transform: translateY(-10px);
 }
 
 .repo-language-color {
@@ -36,4 +43,14 @@
     border-left: 2px solid #959da5;
     padding-left: 16px;
   }
+}
+
+
+img.circle.mb-3 {
+  margin-left: 20px;
+  transition: all ease .5s;
+}
+img.circle.mb-3:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 16px 8px -10px #ccc;
 }
